# shape-guard

./: pyproject.toml
shapeguard/: _compat.py  errors.py  spec.py
